# flows-for-pattern-discovery

./: .gitmodules  LICENSE  README.md  main.py  pyproject.toml
experiments/: toy_mwe.py
src/data/: toy_data.py
src/pattern_flows/: utils.py
src/pattern_flows/configs/: base.yaml  vae.yaml
src/pattern_flows/data/: toy_data.py
src/pattern_flows/experiment_outputs/model_vae/: model_vae.pth
src/pattern_flows/experiments/: toy_mwe.py
src/pattern_flows/models/: vae.py
src/pattern_flows/training/: train_tarflow.py  train_vae_multimodal.py  train_vae_unimodal.py
